fix content overlapping on mobile devices

--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -19,6 +19,7 @@ nav {
 
 	.nav-links{
 		display: flex;
+		z-index: 10;
 		width: 30%;
 		justify-content: space-around;
 		
